# FretSNCF

./: .env  .gitignore  NoteBookJalon1SNCF.ipynb  README.md  README2.md  V3.ipynb  V4 copy 2.ipynb  V4 copy.ipynb  Version2.py  hello.py  infeasible.ilp  instance_WPY_realiste_jalon1.xlsx  mini_instance.xlsx  modele.py  pyproject.toml  resultats - Copy.xlsx  resultats.xlsx  resultatsmini_instance.xlsx.xlsx  results.csv  results_minutes.csv  run_file.py  test.ipynb  utils_donnees.py  utils_horaires.py
Ancien_fichiers/: NoteBookJalon1SNCF.ipynb  V4 copy 2.ipynb  V4 copy.ipynb  V4.ipynb  infeasible.ilp  infeasible_mod.ilp  instance_WPY_realiste_jalon1.xlsx
data/: Projet_CentraleSupelec_Fret_SNCF (1).docx  instance_WPY_realiste_jalon1 - Copy.xlsx  instance_WPY_realiste_jalon1.xlsx  instance_WPY_realiste_jalon3.xlsx  instance_WPY_simple.xlsx  mini_instance.xlsx  resultatsinstance_WPY_realiste_jalon1.xlsx.xlsx  ~$ojet_CentraleSupelec_Fret_SNCF (1).docx
outputs/models/: infeasible.ilp
outputs/results/: resultats.xlsx  resultats_instance_WPY_realiste_jalon1.xlsx  results_instance_WPY_realiste_jalon1 - Copy.xlsx  results_instance_WPY_realiste_jalon1.xlsx  results_instance_WPY_realiste_jalon1_jalon1.xlsx  results_instance_WPY_realiste_jalon2.xlsx  results_instance_WPY_realiste_jalon2_jalon2.xlsx  results_instance_WPY_realiste_jalon2_voies.xlsx  results_instance_WPY_realiste_jalon2_voies_jalon2.xlsx  results_instance_WPY_realiste_jalon3.xlsx  (+7 more)
src/: V3.ipynb  V4 copy.ipynb  main.py  model.py  model_jalon1.py  model_jalon2.py  model_jalon3.py  modele.py  run_file.py
(+17 files in other folders)
