[project]
name = "fret-sncf"
version = "0.1.0"
description = ""
authors = [
    {name = "Du Moulinet D'Hardemare Hugues",email = "hugues.du-moulinet-dhardemare@student-cs.fr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy == 2.2.3",
    "matplotlib == 3.10.0",
    "gurobipy == 12.0.1",
    "pandas == 2.2.3",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
