[project]
name = "fret-sncf"
version = "0.1.0"
description = ""
authors = [
    {name = "Du Moulinet D'Hardemare Hugues",email = "hugues.du-moulinet-dhardemare@student-cs.fr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy == 2.2.3",
    "matplotlib == 3.10.0",
    "gurobipy == 12.0.1",
    "pandas == 2.2.3",
    "openpyxl (>=3.1.5,<4.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "kaleido (==0.2.1)"
]

[tool.poetry]
packages = [{include = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
